--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
                 
         <div class="right">
-                <img src="/img/btn_facebook.png" class="pc1">
-                <img src="/img/btn_instagram.png"class="pc2">
+                <img src="img/btn_facebook.png" class="pc1">
+                <img src="img/btn_instagram.png"class="pc2">
                 <P class="line"> </p>
         <div class="rt">
                 
